# larrecodnn

./: CMakeLists.txt
larrecodnn/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/: CMakeLists.txt
larrecodnn/ImagePatternAlgs/Keras/Tools/: CMakeLists.txt  PointIdAlgKeras_tool.cc
larrecodnn/ImagePatternAlgs/Modules/: CMakeLists.txt  CheckCNNScore_module.cc  EmTrack.h  EmTrackClusterId2outTl_module.cc  EmTrackClusterId3outTl_module.cc  EmTrackMichelIdTl_module.cc  PointIdEffTest_module.cc  RawWaveformDump_module.cc  WaveformRoiFinder_module.cc
larrecodnn/ImagePatternAlgs/Tensorflow/: CMakeLists.txt  quiet_session.h
larrecodnn/ImagePatternAlgs/Tensorflow/Modules/: CMakeLists.txt  CheckCNNScore_module.cc  EmTrack.h  EmTrackClusterId2outTl_module.cc  EmTrackClusterId2out_module.cc  EmTrackClusterId3outTl_module.cc  EmTrackClusterId3out_module.cc  EmTrackMichelIdTl_module.cc  EmTrackMichelId_module.cc  EvaluateROIEff_module.cc  ParticleDecayId_module.cc  PointIdEffTest_module.cc  PointIdTrainingData_module.cc  RawWaveformDump_module.cc  WaveformRoiFinder_module.cc  dump_events_protodune_cnn.fcl  imagepatternalgs.fcl  waveformroifinder.fcl
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/: CMakeLists.txt  PointIdAlg.cxx  PointIdAlg.h  pointidalg.fcl
larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlgTools/: CMakeLists.txt  IPointIdAlg.h  PointIdAlgKeras_tool.cc  PointIdAlgTf_tool.cc  PointIdAlgTrtis_tool.cc
larrecodnn/ImagePatternAlgs/Tensorflow/TF/: CMakeLists.txt  tf_graph.cc
larrecodnn/ImagePatternAlgs/Tensorflow/Tools/: CMakeLists.txt  PointIdAlgTf_tool.cc  WaveformRecogTf_tool.cc
larrecodnn/ImagePatternAlgs/Tensorflow/WaveformRecogTools/: CMakeLists.txt  IWaveformRecog.h  WaveformRecogTf_tool.cc  WaveformRecogTrtis_tool.cc
larrecodnn/ImagePatternAlgs/ToolInterfaces/: IWaveformRecog.h
larrecodnn/ImagePatternAlgs/Triton/Tools/: CMakeLists.txt  PointIdAlgTrtis_tool.cc  WaveformRecogTrtis_tool.cc
larrecodnn/ImagePatternAlgs/job/: example_dump_events_protodune_cnn.fcl
larrecodnn/ImagePatternAlgs/scripts/: plot_data_dump.py  prepare_patches_em-trk-michel-none.py  train_cnn.py  train_cnn_augmented_data.py  utils.py
ups/: product_deps
